# AetherBridge

./: .gitignore  COMPLETED_TASKS.md  Cargo.toml  INCOMPLETED_TASKS.md  README.md  test_compatibility.py  verify_api.sh
crates/api-server/: Cargo.toml
crates/api-server/src/: lib.rs  main.rs  routes.rs  server.rs  session_recovery.rs  spoof_model_helper.rs  state.rs
crates/browser-automator/: Cargo.toml
crates/browser-automator/src/: antigravity.rs  auth.rs  fingerprint.rs  google_driver.rs  lib.rs  protocol_driver.rs  visual_driver.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  platform.rs  shell.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: accounts.rs  constants.rs  flow.rs  lib.rs  storage.rs  tokens.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  main.rs  ui.rs
scripts/: fix_claude_auth.sh
