[package]
name = "browser-automator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { version = "0.1.0", path = "../common" }
oauth = { version = "0.1.0", path = "../oauth" }
anyhow = "1.0.100"
async-stream = "0.3"
async-trait = "0.1.86"
chrono = "0.4"
regex = "1"
enigo = "0.6.1"
futures = "0.3"
headless_chrome = "1.0.20"
image = "0.25.9"
ocrs = "0.12.0"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json", "cookies", "stream"] }
rten = "0.13.1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync"] }
tokio-stream = "0.1"
tracing = "0.1.44"
uuid = { version = "1", features = ["v4"] }
xcap = "0.8.1"
