[package]
name = "oauth"
version = "0.1.0"
edition = "2021"
description = "Google OAuth 2.0 implementation for Antigravity/Cloud Code Assist"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
directories = "5"
urlencoding = "2"
futures = "0.3"
